# ArcheryAi

./: README.md
action_recgnition/: CMakeLists.txt
action_recgnition/cmake/: 3rdparty_lib.cmake  Utils.cmake  cmake.cmake
action_recgnition/include/: action_recognition.hpp  common.hpp  utils.hpp  yolov8-pose.hpp
action_recgnition/src/: CMakeLists.txt  action_recognition.cpp  main.cpp  svm.bk  utils.cpp
